--- a/provider-ui/package.json
+++ b/provider-ui/package.json
@@ -26,6 +26,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@layer5/sistent-components": "^0.1.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "babel-plugin-istanbul": "^6.1.1",
